--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "*",
     "jsonfile": "^2.4.0",
     "mongoose": "*",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "promise": "^7.1.1"
   },
   "author": "Jonathan Portorreal",
   "license": "ISC"
